[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Tools/FinishLine/food_pizza_01.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tools/FinishLine.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound/Effects/mixkit-final-level-bonus-2061.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 197, 195.5 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00578035, 0.352601, 0.722543, 1 )
colors = PoolColorArray( 0.894118, 0.615686, 0.137255, 1, 0.901961, 0, 0.0705882, 1, 0, 0.4, 0.196078, 1, 1, 0.941176, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 56.42
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 20.0
scale_random = 0.5
color_ramp = SubResource( 3 )

[node name="FinishLine" type="Area2D"]
collision_layer = 512
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -8.5 )
shape = SubResource( 1 )

[node name="LevelCompletedEffect" type="Particles2D" parent="."]
scale = Vector2( 10, 10 )
emitting = false
amount = 1000
lifetime = 2.0
one_shot = true
explosiveness = 0.34
process_material = SubResource( 4 )

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_FinishLine_body_entered"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_EffectTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
